--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+server.port = 8081
 
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
