--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 server.port = 8081
